k8s/apps/gitea/gitea-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-db
  namespace: default
spec:
  ports:
  - name: port-5432
    port: 5432
    targetPort: 5432
  selector:
    app: gitea-db
