k8s/apps/gitea/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: default
spec:
  ports:
  - name: port-22
    port: 22
    targetPort: 22
  - name: port-3000
    port: 3000
    targetPort: 3000
  selector:
    app: gitea
